add a theory appendix

--- a/writeup/cryptography.tex
+++ b/writeup/cryptography.tex
@@ -1,643 +1,5 @@
-% vim:ft=tex
-% TODO: some kind of intro thingy idk
+\section{Foundations: Computational Hardness}
 
-Cryptography is the mathematical study of secure computation. In a computation,
-we want to use \emph{protocols} to transform \emph{resources}. For the
-computation to be secure, it must successfully resist \emph{attacks} by
-\emph{adversaries}. We will make all of these notions precise, but first we
-discuss a motivating example.\footnote{Many more examples can be found in any
-	introductory text on cryptography, such as~\cite{katz-lindell-2014, rosulek-2021,
-		pass-shelat-2020}.}
 
-\section{Commitment Protocols}
 
-Suppose we want to build an online rock-paper-scissors game. Two players, Alice
-and Bob, should both be able to send each other a move and so determine the
-winner. However, something needs to prevent the players from waiting until after
-they learn the other's move to choose their own move. This is an ideal use-case
-for a \emph{commitment protocol}.
 
-Informally, a commitment protocol proceeds as follows. The sender $S$ has a
-message $m$ that they wish to commit to---in our case, $m$ is one of
-$\{R,P,S\}$. In the \emph{commit phase}, they send a commitment $c$ to the
-receiver $R$. At some later time, $S$ may reveal $m$---plus maybe some auxillary
-data, for example their random bits---to $R$, in which case $R$ should be able
-to verify that $c$ was indeed a commitment to $m$.
-
-We can formalize commitment schemes as follows:
-
-\begin{dfn}[commitment protocol]\label{def:commitment protocol}
-	A \emph{commitment protocol} consists of the following data:
-	\begin{itemize}
-		\item the \emph{message space} $\cM$ and \emph{commit space} $\cC$;
-		\item a pair of families of probabalistic interactive algorithms\footnote{We
-			      have been imprecise about our formal notion of algorithm. For our
-			      purposes in this chapter, Turing machines suffice; we will be more
-			      precise about this later. In particular, it will be important that we
-			      consider the security parameter as indexing a family of algorithms, rather
-			      than as a unary input to each algorithm as is common in the literature.}
-		      $S_n$ and $R_n$ (indexed by the
-		      \emph{security parameter} $n\in\NN$), respectively called the \emph{sender}
-		      and \emph{receiver}, such that:
-		      \begin{itemize}
-			      \item in the \emph{commit phase}, $S_n$ gets $m\in\cM$ and returns
-			            $c\in\cC$, while $R_n$ returns $\bot$ or $\top$;
-			      \item in the \emph{reveal phase}, $S_n$ gets $m\in\cM$, while $R_n$
-			            gets $c\in\cC$, returning $\bot$ or $m'\in\cM$.
-		      \end{itemize}
-	\end{itemize}
-\end{dfn}
-
-\begin{ntn}
-	Let $S$ and $R$ be interactive algorithms as in \Cref{def:commitment protocol}.
-  \begin{itemize}
-		\item	We will write $\alg{Com}_S^R(m)$ for the output of $S$
-		      in the commit phase with $S$ getting input $m\in\cM$, or $\bot$ if $R$
-		      returns $\bot$.
-		\item We will write $\alg{Rev}_S^R(m, c)$
-		      for the output of $R$ in the reveal phase with $S$ getting input
-		      $m\in\cM$ and $R$ getting input $c\in\cC$.
-
-		      Where $S$ and $R$ are clear, we may omit the respective annotations.
-	\end{itemize}
-\end{ntn}
-
-\noindent
-It is worth elaborating on the ubiquitous notion of a \emph{security parameter}, as
-seen in \Cref{def:commitment protocol}.\todo{TODO: this}
-
-We would like the commitment scheme to be correct, in that when the parties
-behave honestly according to the protocol, the receiver returns the correct
-message. Formally:
-\begin{dfn}
-	A commitment protocol $(S_n,R_n)$\footnote{When $n$ is unbound, we use this
-		notation to indicate a family of pairs $\{(S_n,R_n):n\in\NN\}$; when $n$ is bound it refers
-		to the specific pair $(S_n,R_n)$.} is \emph{correct} if for all $n\in\NN$ and
-	$m\in\cM$, \[
-		\Pr[\alg{Rev}_{S_n}^{R_n}(m, \alg{Com}_{S_n}^{R_n}(m)) = m] = 1.
-	\]
-\end{dfn}
-
-\noindent
-Given a commitment protocol $(S_n,R_n)$, we should be able to define a family of
-algorithms for our rock-paper-scissors game as follows. Let $\cM = \{R,P,S\}$
-and let $W: (\bot\sqcup\cM)^2\rightarrow\{1,0,-1,\bot\}$ compute whether the
-first argument beats, ties, or loses to the second, propagating any $\bot$s.
-
-% TODO: the notation here is a little ambiguous; in particular it's not completely
-% clear who has views into what. We could clean it up at the cost of notational
-% overhead,but it's also pretty clear from context.
-\begin{prot}{Rock-Paper-Scissors}\label{prot:rock-paper-scissors}
-	\begin{enumerate}[itemsep=-0.2em]
-		\item $A_n$ receives input $a\in\cM$; $B_n$ receives input $b\in\cM$.
-		\item $A_n$ acts as $S_n$ and $B_n$ as $R_n$ to compute $c_a = \alg{Com}_{S_n}^{R_n}(a)$.
-		\item $A_n$ acts as $R_n$ and $B_n$ as $S_n$ to compute $c_b = \alg{Com}_{S_n}^{R_n}(b)$.
-		\item $A_n$ acts as $S_n$ and $B_n$ as $R_n$ to compute $a' = \alg{Rev}_{S_n}^{R_n}(a,c_a)$.
-		\item $A_n$ acts as $R_n$ and $B_n$ as $S_n$ to compute $b' = \alg{Rev}_{S_n}^{R_n}(b,c_b)$.
-		\item $A_n$ returns $W(a,b')$.
-		\item $B_n$ returns $W(a',b)$.
-	\end{enumerate}
-\end{prot}
-
-\begin{ntn}
-	Given some fixed commitment protocol, we will write
-	$\alg{RPS}_{A}^{B}(a,b)$ for the results returned by $A$ and $B$,
-	respectively. If $A$ or $B$ are honest, we will omit the corresponding
-	annotation.
-\end{ntn}
-
-\noindent
-As with commitment, we can define correctness of this protocol.
-\begin{dfn}
-	\Cref{prot:rock-paper-scissors} is \emph{correct} relative to a commitment
-	protocol $(S_n,R_n)$ if for all $a,b\in\{R,P,S\}$,
-	\[
-		\Pr[\alg{RPS}(a, b) = (W(a,b), W(a,b))] = 1.
-	\]
-\end{dfn}
-
-\begin{prop}
-	\Cref{prot:rock-paper-scissors} is correct relative to any correct commitment
-	protocol.
-\end{prop}
-
-\begin{proof}
-	Fix a correct commitment protocol. Then \begin{align*}
-		 & \Pr[\alg{RPS}(a,b) = (W(a,b),W(a,b))]                                     \\
-		 & = \Pr[W(a,b') = W(a,b)\text{ and }W(a',b) = W(a,b)]                       \\
-		 & = \Pr[W(a,b') = W(a,b)]\cdot\Pr[W(a',b) = W(a,b)]                         \\
-		 & \geq \Pr[b'=b]\cdot\Pr[a'=a]                                              \\
-		 & = \Pr[\alg{Rev}(b,c_b)=b]\cdot\Pr[\alg{Rev}(a, c_a) = a]                  \\
-		 & = \Pr[\alg{Rev}(b,\alg{Com}(b))=b]\cdot\Pr[\alg{Rev}(a,\alg{Com}(a)) = a] \\
-		 & = 1.\qedhere
-	\end{align*}
-\end{proof}
-
-\noindent
-Furthermore, at least in this case, it was easy to define notions of correctness
-that compose. Our task now is to define security of commitment and
-rock-paper-scissors such that, whenever a commitment scheme is secure,
-\Cref{prot:rock-paper-scissors} is likewise secure.
-
-% \section{Desiderata}
-
-% \todo{I think we should say something like this at some point, but to be honest
-% 	I think I'm way too inexperienced to have confidence in what I'm saying. These
-% 	all seem like reasonable considerations, but I'm not sure I want to get into
-% 	this kind of argument in what should be a largely technical paper.}
-
-% In order to evaluate security definitions, we need to know what the properties
-% of a good definition are. There are many possible factors; we outline some that
-% will be relevant here.
-
-% First, as with all definitions in computer science, it must capture the
-% intuitive notions we wish to formalize. Formal security proofs are no good if
-% our notion of security is meaningless. There is, of course, no formal way to
-% prove that a definition is correct in this sense, so on some level we must try
-% enough examples to build trust that we have not missed any significant
-% incongruities between our mathematical model and the real world.
-
-% Second, the definitions should be amenable to proof. Complex definitions with
-% many moving parts, even when they have better technical properties, are not
-% conducive to good mathematical practice. They make proofs hard to follow and
-% trust, 
-
-\section{Composition}
-
-We are centrally concerned in this thesis with the properties of security
-definitions under composition. By composition, we informally mean
-stitching-together various protocols to form some larger protocol\footnote{The
-	exact formal definition depends on the underlying model of computation, which
-	we have deliberately left unspecified.}. We will say that a security
-definition \emph{composes} if, whenever each of the smaller protocols is
-secure, the larger protocol is also secure.
-
-There are two separate types of composition to consider. In \emph{sequential}
-(or \emph{vertical}) composition, only one of the small protocols is running at
-any given time. In the more general setting of \emph{parallel} (or
-\emph{horizontal}) composition, the parties involved may be engaged at various
-stages of many small protocols at once. There are several in-between notions to
-consider. For example, one can consider bounded-width composition, where the
-number of algorithms running in parallel is bounded by some function of the
-security parameter.
-
-\Cref{prot:rock-paper-scissors} is also somewhere in between sequential and
-parallel composition. There are two commitment protocols running simultaneously,
-but each phase of each protocol is running sequentially: while the parties are
-actively engaged in a specific commit or reveal phase, they are doing nothing
-else. As we will see when we discuss simulation security, working with
-multi-phase protocols like commitment adds a layer of complexity to many
-frameworks.
-
-\section{Game-Based Security}
-
-In \emph{game-based} approaches to security, we define security by determining
-the winner of an abstract game. Here, we encode specific properties we want the
-algorithm to have, and say that an adversary wins the game if they can break the
-property. In standard approaches to
-commitment\footnote{See~\cites[Section 4.4.1]{goldreich-2001}.}, there are two
-desirable properties. \emph{Hiding} means that the receiver should not learn
-anything about the message until the reveal phase. \emph{Binding} means that the
-sender should not be able to trick the receiver into anything other than the
-committed message. Formally:
-
-\begin{dfn}\label{def:game commitment}
-	A commitment scheme $(S_n, R_n)$ is \emph{game-secure} if the following hold.
-	\begin{itemize}
-		\item \emph{Hiding:} consider the following game against a family of
-		      adversaies $R'_n$.
-		      \begin{game}\label{game:hiding}
-			      \item $R'_n$ outputs $m_0,m_1\in \cM$.
-			      \item A random bit $b\in\{0,1\}$ is chosen; $m_b$ is given to $S_n$.
-			      \item $S_n$ and $R'_n$ participate in the commit phase.
-			      \item $R'_n$ outputs a guess $b'\in\{0, 1\}$. $R'_n$ wins if $b' =
-				      b$.
-		      \end{game}
-		      A commitment scheme is \emph{hiding} if for any family of
-		      probabalistic polynomial-time algorithms $R'_n$, \[
-			      \Pr[R'_n\text{ wins \Cref{game:hiding}}] \leq \frac{1}{2} + \negl.
-		      \]
-		      The idea is that $R'_n$ participates in the commit phase for a randomly
-		      chosen message $m_b$, and then tries to guess $b$; they should be able
-		      to guess no more than negligibly\footnote{A function is \emph{negligible},
-			      written $\negl$, if it is asymptotically smaller than any rational
-			      function in $n$.} better than random.
-		\item \emph{Binding:} consider the following game against a family of
-		      adversaires $S'_n$.
-		      \begin{game}\label{game:binding}
-			      \item $S'_n$ outputs $m\in\cM$.
-			      \item $S'_n$ and $R_n$ participate in the commit phase.
-			      \item A random bit $b\in\{0,1\}$ is chosen and given to $S'_n$.
-			      \item $S'_n$ and $R_n$ participate in the reveal phase.
-			      \item If $b = 0$, $S'_n$ wins if $R_n$ outputs $m$. If $b = 1$,
-			      $S'_n$ wins if $R_n$ outputs any $m'\notin \{m, \bot\}$.
-		      \end{game}
-
-		      A commitment scheme is \emph{binding} if for any family of
-		      probabalistic polynomial-time algorithms $S'_n$, \[
-			      \Pr[S'_n\text{ wins \Cref{game:binding}}] \leq \frac{1}{2} + \negl.
-		      \]
-		      The idea is that $S'_n$ first makes a commitment, and then learns
-		      whether they want to lie to $R_n$; they should be able to do no more
-		      than negligibly better than guessing which of the two messages to
-		      commit to before learning the random bit.
-	\end{itemize}
-\end{dfn}
-
-\noindent
-Similarly, we can define security of \Cref{prot:rock-paper-scissors} by having
-the adversary play against an honest party who moves according to some
-probability distribution.
-
-\begin{dfn}
-	\Cref{prot:rock-paper-scissors} is \emph{game-secure} relative to a commitment
-	protocol $(S_n,R_n)$ if the following hold for any probability distribution
-	$P$ on $\cM$:
-	\begin{itemize}
-		\item \emph{A-security}: For any family of PPT\footnote{Probabalistic
-			      polynomial-time, though this definition can be made relative to any class
-			      of adversarial algorithms.} algorithms $A'_n$,\[
-			      \Pr[\pr_2(\alg{RPS}_{A'_n}(a, b)) = 1] \leq \max_{m\in\cM}P(m) + \negl,
-		      \]
-		      where the randomness is over uniform choice of $a$ and choice of $b$
-		      according to $P$.
-		\item \emph{B-security}: For any family of PPT algorithms $B'_n$,\[
-			      \Pr[\pr_1(\alg{RPS}^{B'_n}(a, b)) = -1] \leq \max_{m\in\cM}P(m) + \negl,
-		      \]
-		      where the randomness is over choice of $a\in\cM$ according to $P$ and
-		      uniform choice of $b$.
-	\end{itemize}
-\end{dfn}
-
-\noindent
-Observe that when the adversary controls $A$, we care only that $B$ outputs a
-fair view of the game, and when the adversary controls $B$, we only care that
-$A$ outputs a fair view of the game: we can never prevent the adversary from
-just outputting that they win.
-
-\vspace{1em}
-
-Surprisingly, as we now show, it does not hold that \Cref{prot:rock-paper-scissors} is
-game-secure relative to any game-secure commitment scheme.
-
-Let $f:\bin^*\rightarrow\bin^*$ be a \emph{one-way permutation}\footnote{That such functions exist is a
-	standard cryptographic assumption; see any introductory textbook, for
-	example~\cite[Section 7.1]{katz-lindell-2014}.}, i.e. an injective function
-which is easy to compute but hard to invert. Formally,
-this means that\begin{itemize}
-	\item $f$ is poly-time computable;
-	\item for any family of PPT algorithms $f'_n$, \[
-		      \Pr_{x\leftarrow\bin^n}[f(f'_n(f(x))) = f(x)] \leq \negl.
-	      \]
-\end{itemize}
-
-Let $h: \bin^*\rightarrow\ZZ_3$ be a \emph{ternary\footnote{Typically, by
-		hard-core predicate we mean a function which outputs a Boolean; we extend the
-		notion for the case of rock-paper-scissors.} hard-core predicate}\footnote{If
-	one-way permutations exist, then so too do one-way permutations with hard-core
-	predicates~\cite{yao-1982}.} of $f$, i.e., a
-function which is easy to compute, but hard to compute ``on $f$,'' in that
-\begin{itemize}
-	\item $h$ is poly-time computable;
-	\item for any family of PPT algorithms $h'_n$, \[
-		      \Pr_{x\leftarrow\bin^n}[h'_n(f(x)) = h(x)] \leq \frac{1}{3} + \negl.
-	      \]
-\end{itemize}
-
-\begin{prot}{$(f,h)$-Commitment}\label{prot:commitment}
-	\newline
-	\emph{Commit:}
-	\begin{enumerate}[itemsep=-0.2em,topsep=-0.2em]
-		\item $S_n$ gets $m\in\{R,P,S\}$ and interprets as an element of $\ZZ_3$.
-		\item $S_n$ picks $x\in\bin^n$ uniformly at random.
-		\item $S_n$ sends $(f(x), h(x) + m)$ to $R_n$.
-		\item $S_n$ returns $(f(x), h(x) + m)$.
-		\item $R_n$ returns $\top$.
-	\end{enumerate}
-	\vspace{1em}
-	\emph{Reveal:}
-	\begin{enumerate}[itemsep=-0.2em,topsep=-0.2em]
-		\item $S_n$ sends $x$ to $R_n$.
-		\item $R_n$ verifies the values of $f(x)$ and $h(x) + m$.
-		\item If the verification succeeds, $R_n$ returns $m$; else they return $\bot$.
-	\end{enumerate}
-\end{prot}
-
-\noindent
-The idea is that secrecy is guaranteed by hardness of $h$, while
-bindingness is guaranteed by injectivity of $f$. Indeed:
-
-\begin{prop}
-	\Cref{prot:commitment} is game-secure.
-\end{prop}
-\begin{proof}We need to show two things.
-	\begin{itemize}
-		\item \emph{Hiding:} let $R'_n$ be a family of PPT algorithms. Make a
-		      family $h'_n$ which proceeds as follows:
-		      \begin{enumerate}[itemsep=-0.2em]
-			      \item Receive input $y\in\bin^*$.
-			      \item Run $R'_n$ to get $m_0,m_1\in\{R,P,S\}$.
-			      \item Send $(y, 0)$ to $R'_n$, get back a guess $b'$.
-			      \item Output $-m_{b'}$.
-		      \end{enumerate}
-
-		      If $h(x) + m_b = 0$ for some $b$, then $h'_n$ guesses $h(x)$ whenever
-		      $R'_n$ guesses $b$. However, since $h(x)$ must look uniformly
-		      distributed, this occurs negligibly close to $\frac{2}{3}$ of the
-		      time. Hence since $h'_n$ guesses right no more than negligibly more
-		      than $\frac{1}{3}$ of the time, $R'_n$ guesses right no more than
-		      negligibly more than $\frac{1}{2}$ of the time.
-		\item \emph{Binding:} By injectivity of $f$, there is a unique $x$ such that
-		      $f(x)$ is committed. Once $R_n$ gets this unique $x$, they can
-		      deterministically verify $f(x)$ and $h(x)+m$, returning $\bot$ if this
-		      fails. \qedhere
-	\end{itemize}
-\end{proof}
-
-\noindent
-This is an example of \emph{proof by reduction}, a common technique in computer
-science. The idea is to reduce one problem into another by starting with a
-solution to the second and showing how to solve the first. If the first problem
-is known to be hard, in some precise sense, then by studying the structure of
-the reduction we can learn about the hardness of the second problem. In this
-case, we reduce the problem of computing the hard-core predicate into the
-problem of breaking the commitment scheme. To do this, we show that if we have
-some strategy $R'_n$ to attack the commitment scheme, then we can use it to
-build a strategy $h'_n$ to compute the hard-core predicate. We can then show
-hidingness of the commitment scheme using our assumption about the hardness of
-the hard-core predicate.
-
-Regardless, we now observe that \Cref{prot:rock-paper-scissors} is not
-game-secure relative to \Cref{prot:commitment}. The problem is that
-\Cref{prot:commitment} is \emph{malleable}, in that the receiver can compute the
-commitment of a message related to the message committed by the receiver. In
-particular, to win at rock-paper-scissors, Bob only needs to take Alice's
-commitment $(y, z) = (f(x), h(x) + m)$ and return $(y, z+1) = (f(x), h(x) + m +
-	1)$, which is a valid commitment to $m+1$. This does not violate secrecy, as the
-receiver still cannot learn anything about the message from this new computed
-commitment.
-
-Realizing this, we could now add non-malleability to the list of security
-properties in \Cref{def:game commitment}. However, this example reveals a
-broader issue with game-based security definitions: they rely on ad-hoc
-specifications of security properties, and we need to trust that we have thought
-hard enough to ensure that the properties we have specified are enough. For this
-reason, there are no general composition theorems for game-based security, and
-so large composite protocols of the kind used in real-world applications have to
-be proven secure by hand. In the next section, we outline a more principled
-approach.
-
-
-\section{Simulation-Based Security}
-
-In \emph{simulation-based} approaches to security, we define security by
-comparing a protocol in the real world to an ideal world in which the desired
-resource is produced by a trusted black-box. We say a protocol is secure if a
-real-world adversary has no more influence on the outcome than they would in the
-ideal case. The proofs typically proceed by showing that any adversary in the
-real world can be ``simulated'' by an adversary in the ideal world.
-
-It's easy to define the ideal world for commitment protocols, using a trusted
-party $T$:
-
-\begin{prot}{Ideal Commitment}\label{prot:ideal commitment}
-	\newline
-	\emph{Commit:}
-	\begin{enumerate}[itemsep=-0.2em,topsep=-0.2em]
-		\item $\ideal{S}_n$ gets $m\in\cM$.
-		\item $\ideal{S}_n$ sends $m$ to $T$.
-	\end{enumerate}
-	\vspace{1em}
-	\emph{Reveal:}
-	\begin{enumerate}[itemsep=-0.2em,topsep=-0.2em]
-		\item $T$ sends $m$ to $\ideal{R}_n$.
-		\item $\ideal{R}_n$ outputs $m$.
-	\end{enumerate}
-\end{prot}
-
-\begin{ntn}
-	As in \Cref{prot:ideal commitment}, we will generally use overlines to denote
-	parties engaged in an ideal protocol.
-\end{ntn}
-
-\noindent
-It remains to define the correct sense in which to compare attacks on the actual
-protocol to the ideal protocol.
-
-\begin{dfn}[computataional indistinguishability]\label{def:computataional indistinguishability}
-	Two families of random functions $\{X_n: A\rightarrow B\}$ and $\{Y_n:
-		A\rightarrow B\}$ are \emph{computationally indistinguishable} if, for any
-	PPT algorithm $D$ and $a\in A$, we have\[
-		|\Pr[D(X_n(a)) = 1] - \Pr[D(Y_n(a)) = 1]| \leq \negl.
-	\]In this case, we write $X\compind Y$.
-\end{dfn}
-
-\noindent
-The idea is that $D$ attempts to distinguish between $X$ and $Y$, and must fail
-to do so all but negligibly often. If the combined output of some real protocol is
-computationally indistinguishable from the output of the ideal protocol, then
-this indicates that \emph{no} adversary can distinguish between execution of the real
-protocol and the ideal protocol. As such, when we eventually prove composition
-theorems, we will be able to substitute the ideal protocol in place of the real
-protocol in order to prove security of some larger protocol.
-
-\begin{ntn}
-	We now let $\alg{Com}_S^R(m)$ denote the \emph{pair} of outputs of $S$ and $R$
-	in the commit phase, with $S$ getting input $m$, and so too for
-	$\alg{Rev}_S^R(m, c)$. Recall that $\alg{Com}_{\ideal{S}}^{\ideal{R}}$ and
-	$\alg{IRev}_{\ideal{S}}^{\ideal{R}}$ refer to the ideal protocol. Note that in
-	this case, we omit the trusted party $T$, who always acts according to the
-	protocol.
-\end{ntn}
-
-\noindent
-Combining the pair of outputs allows us to deal with issues like malleability,
-where (by hidingness) the receiver's output on its own is no different from that
-in the ideal protocol, but the pair of outputs may be correlated in the real
-protocol but not the ideal protocol.
-
-% TODO: actually needs to be against any adversary, ofc
-\begin{dfn}
-	A commitment protocol $(S_n, R_n)$ is \emph{simulation-secure} if the
-	following hold:
-
-	\begin{itemize}
-		\item \emph{Secure commit}: for any family of PPT algorithms $R'_n$, there
-		      exists a family of PPT algorithms $\ideal{R}'_n$ such that for any
-		      $m\in\cM$,
-		      \[
-			      \alg{Com}_{S_n}^{R'_n}(m) \compind\alg{Com}_{\ideal{S}_n}^{\ideal{R}'_n}(m).
-		      \]
-		\item \emph{Secure reveal}: for any family of PPT algorithms $S'_n$,
-		      there exists a family of PPT algorithms $\ideal{S}'_n$ such that for any
-		      $m\in\cM$ and $c\in\cC$, \[
-			      \alg{Rev}_{S'_n}^{R_n}(m, c) \compind\alg{Rev}_{\ideal{S}'_n}^{\ideal{R}_n}(m, c).
-		      \]
-	\end{itemize}
-\end{dfn}
-
-\noindent
-To demonstrate the definition, we observe that \Cref{prot:commitment} is \emph{not}
-simulation-secure.\todo{TODO: the definition is not quite right, so we can't
-	finish this thought yet. We need to talk about the difficulty of proof in the
-	paradigm, and also just how simulation proofs work.}
-% TODO: is any protocol secure by this defintion? what if R' just outputs the
-% commit and D checks whether S and R' outputted the same?
-
-Indeed, simulation security is sufficiently strong as to obtain a general
-sequential composition theorem:
-
-\begin{thm}[\cite{micali-rogaway-1992}]\label{thm:sequential composition for simulation security}
-	Let $\{f_1,\cdots,f_{p(n)}\}$ be a set of polynomially-many \emph{two-party
-		functionalities}, meaning functions
-	$\bin^*\times\bin^*\rightarrow\bin^*\times\bin^*$. Let $\{\pi_i\}$ be
-	simulation-secure protocols for computing each of the $\{f_i\}$. Then the
-	sequential composition of the $\pi_i$s is a simulation-secure protocol for
-	computing the composite functionality $f_{p(n)}\circ\cdots\circ f_1$.
-\end{thm}
-
-\noindent
-We interpret the functionalities $f_i$ as computational problems where two
-parties, given inputs $x,y\in\bin^*$, work together to compute outputs
-$\pr_1(f_i(x, y)), \pr_2(f_i(x, y))$. Such functionalities encompass a huge
-class of cryptographic protocols. The theorem says that if we know how to
-compute each $f_i$ in a simulation-secure way---where the ideal world involves
-both parties giving their inputs to the trusted party and recieving their
-outputs back---then we can compute the composite simulation-securely, as well.
-For a more careful treatment of this theorem, and simulation security as a whole,
-see~\cite{lindell-2017}.
-
-% \begin{rmk}\label{rmk:polynomial composition only}
-It's important to observe that
-\Cref{thm:sequential composition for simulation security} works only for polynomially many functionalities. Recall that
-computational indistinguishability requires only a neglible difference between
-the real and ideal worlds, rather than requiring no difference. As a
-consequence, the theorem cannot hold for arbitrarily many functionalities, as
-the super-polynomial composition of negligible functions may fail to be
-negligible. In fact, computational indistinguishability is not even a real
-equivalence relation, as transitivity fails with more than polynomially many
-compositions. We make an attempt to illustrate the issue in
-\Cref{fig:polynomial
-distinguishability}. Regardless, this is a fundamental issue: as long as our
-definitions of security are computational, we should not expect a
-super-polynomial composition of secure processes to remain secure.
-
-\begin{fig}[t]
-  \[
-  \begin{pic}
-			\node[morphism] (fk) at (0,2.5) {$f_{K(n)}$};
-			\node[dashedmorphism] (dots) at (0,1.5) {};
-			\node[morphism] (f1) at (0,0) {$f_1$};
-			\node[morphism] (f2) at (0,.75) {$f_2$};
-			\draw (f1.south) to ++(0,-.3) node[right] {};
-			\draw (f2.south) to (f1.north);
-			\draw (f2.north) to (dots.south) {};
-			\draw (fk.south) to (dots.north) + (0,-0.2);
-			\draw (fk.north) to ++(0,.3) node[right] {};
-
-			% \node[font=\normalfont] at (1.5,1.25) {$\overset{C}{\equiv}$};
-
-			\node (o1) at (1.5,0) {$o(n^{-d})$};
-			\node (o2) at (1.5,.75) {$o(n^{-d})$};
-			\node (ok) at (1.5,2.5) {$o(n^{-d})$};
-			\draw[-|] (o1) to (0.75,0);
-			\draw[-|] (o1) to (2.25,0);
-			\draw[-|] (o2) to (0.75,.75);
-			\draw[-|] (o2) to (2.25,.75);
-			\draw[-|] (ok) to (0.75,2.5);
-			\draw[-|] (ok) to (2.25,2.5);
-
-			\node[morphism] (gk) at (3,2.5) {$g_{K(n)}$};
-			\node[dashedmorphism] (gdots) at (3,1.5) {};
-			\node[morphism] (g1) at (3,0) {$g_1$};
-			\node[morphism] (g2) at (3,.75) {$g_2$};
-			\draw (g1.south) to ++(0,-.3) node[right] {};
-			\draw (g2.south) to (g1.north);
-			\draw (g2.north) to (gdots.south) {};
-			\draw (gk.south) to (gdots.north) + (0,-0.2);
-			\draw (gk.north) to ++(0,.3) node[right] {};
-		\end{pic}
-  \]
-  \caption{Even if $K(n)$ processes are computationally
-  indistinguishable---meaning the adversary has only $o(n^{-d})$ chance to
-  distinguish them---if $K(n)$ is super-polynomial, the composition of these
-  processes may be distinguishable.\label{fig:polynomial distinguishability}}
-\end{fig}
-% \end{rmk}
-
-Regardless, while simulation security is generally a stronger guarantee than
-game security, it is not perfect. In 1996, Goldreich and Krawczyk constructed a
-protocol for \emph{zero-knowledge proof} which is simulation-secure, but is not
-secure under parallel composition~\cite{goldreich-krawczyk-1996}. The
-construction is quite artificial, and we are not aware of any natural examples
-in which simulation security fails to compose. Nonetheless, for the purpose of
-provable security, we need a more powerful framework. There are several options,
-but the most popular by far is \emph{universal composability}.
-
-\section{Universally Composable Cryptography}
-
-Universally composable cryptography, due to Ran Canetti, is a framework for
-writing composible proofs of security~\cite{canetti-2000}. While a full
-treatment is far outside our scope, we give some intuition here, and conclude
-with a discussion of some drawbacks of the framework.
-
-UC maintains the same basic idea as simulation security---the actual execution
-of the protocol is compared to some ideal world in which a trusted, unbounded
-third party is available. The main difference is how the ideal world is compared
-to the actual protocol. In simulation security, we use the straightforward
-notion of computational indistinguishability of outputs---at the end of the
-protocol, both parties output some value, and we compare the distribution of
-outputs in the ideal world to the real world. Even with commitment, we saw that
-this poses some difficulties when we want the protocol to satisfy some property
-midway through its execution.
-
-In contrast, in universal composability, the adversary freely interacts with a
-separate (poly-time) algorithm, the \emph{environment}. To be UC-secure, it
-should be impossible for the environment to distinguish between the ideal
-protocol and the real protocol \emph{at any point during the execution}. This
-much stronger guarantee allows us to obtain a general parallel composition
-theorem, the intuition being that the environment could include artbirary other
-protocols, running simultaneously with the protocol under proof, so UC security
-implies security under even (polynomial-width) parallel composition.
-
-On the other hand, this framework comes with onerous proof buderns. Whereas in
-the simulation paradigm, the ideal-world adversary must simulate interaction with
-the actual protocol, in the UC paradigm, the ideal-world adversary must also
-simulate the real-world adversary's interaction with the environment. Because
-this interaction is not constrained other than by computational bounds on the
-environment, even the simplest UC proofs require complex arguments about the
-flow of information through the protocol.
-
-As a consequence, many cryptographers find UC proofs hard to trust. The
-framework is fundamentally tied to certain technical choices, such as the
-computational model of turing machines, meaning it requires modification to
-deal with, for example, quantum
-cryptography~\cite{hofheinz-mullerquade-2003,unruh-2010}. The proofs tend to be
-extremely technical, often not even included in published work but instead left
-to supplemental material. The framework has been modified seven times since its
-introduction in 2000, including as recently as 2020~\cite{canetti-2020}, and many of
-these versions have introduced incompatible technical changes. The cumulative
-result of all of this is that, while UC is undoubtedly the most powerful
-framework for composable proof in common use today, it is not as widespread as
-one might expect.
-
-\section{Conclusion}
-
-In this chapter, we considered three frameworks for security definitions in
-cryptography: game-based security, simulation-based security, and universal
-composability. Each of these frameworks exhibits tradoffs between complexity,
-composability, and ease of proof. While game-based proofs are simple to write,
-game-based definitions tend to be ad-hoc, making the definitions hard to trust
-and composition theorems impossible to obtain. On the other hand, universal
-composability obtains extremely powerful composition theorems, and leaves no
-room for error in writing definitions, but leads to complex proofs ridden with
-technical details. Simulation-based security lies somewhere in the middle, with
-good properties under sequential composition, but falls short of the generality
-of the UC framework.
-
-This situation calls out for a new framework which takes advantage of powerful
-mathematical abstractions to simplify proofs, while maintaining the composition
-guarantees of universal composability. We believe that category theory is the
-right mathematical abstraction on which to base such a framework. In the next
-chapter, we will introduce the basic notions of this field, motivated by their
-potential relationship to cryptography.
