--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -83,6 +83,7 @@
 \newtheorem{thm}{Theorem}[chapter]
 \newtheorem{lemma}[thm]{Lemma}
 \newtheorem{prop}[thm]{Proposition}
+\newtheorem{conj}[thm]{Conjecture}
 \newtheorem{cor}{Corollary}[thm]
 
 \theoremstyle{definition}
