--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -70,9 +70,14 @@
 \chapter{Category Theory}
 \input{category-theory}
 
+\appendix
+\chapter{Theory}
+\input{theory.tex}
+
 \backmatter{}
 \nocite{*}
 \printbibliography
+
 
 % TODO: index?
 \end{document}
